--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 	<meta charset="utf-8" />
-	<link rel="icon" href="%PUBLIC_URL%/assets/img/D-favicon.png" />
+	<link rel="icon" href="%PUBLIC_URL%/D-favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#000000" />
 	<meta name="description"
